// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Call Handler 1`] = `
Object {
  "backgroundColor": "#ef4444",
}
`;

exports[`Call Handler 2`] = `
Object {
  "backgroundColor": "rgb(22, 22, 22)",
}
`;

exports[`Call Handler 3`] = `
Object {
  "props": Array [
    "rgb(22,22,22)",
  ],
  "type": "color",
  "uid": "bg",
  "variants": Array [],
}
`;

exports[`Call Handler 4`] = `
Object {
  "backgroundColor": "rgb(22, 22, 22)",
}
`;

exports[`Call Handler 5`] = `
Object {
  "backgroundColor": "rgb(22, 22, 22)",
}
`;

exports[`guard with meld 1`] = `
Object {
  "--w-border-opacity": "1",
  "borderColor": "rgba(254, 243, 199, var(--w-border-opacity))",
}
`;

exports[`guard with meld 2`] = `
Object {
  "borderWidth": "2px",
}
`;

exports[`guard with meld 3`] = `
Object {
  "--w-border-opacity": "1",
  "borderColor": "rgba(96, 165, 250, var(--w-border-opacity))",
}
`;

exports[`use multi plugin with meld and use 1`] = `
Object {
  "borderWidth": "0px",
}
`;

exports[`use multi plugin with meld and use 2`] = `
Object {
  "--w-border-opacity": "1",
  "borderColor": "rgba(16, 185, 129, var(--w-border-opacity))",
}
`;

exports[`use multi plugin with meld and use 3`] = `
Object {
  "borderStyle": "dashed",
}
`;

exports[`use single plugin 1`] = `
Object {
  "backgroundColor": "rgb(22, 22, 22)",
}
`;

exports[`use single plugin 2`] = `
Object {
  "backgroundColor": "red",
}
`;

exports[`use single plugin 3`] = `
Object {
  "backgroundColor": "aliceBlue",
}
`;

exports[`use single plugin 4`] = `
Object {
  "backgroundColor": "#ffffff",
}
`;

exports[`useGeneric With Trigger 1`] = `
Object {
  "backgroundColor": "rgb(22, 22, 22)",
}
`;
